Fixed Overflow bug

--- a/src/OutputPane/OutputPane.css
+++ b/src/OutputPane/OutputPane.css
@@ -6,6 +6,7 @@
   height: 100%;
   padding: 12px;
   box-sizing: border-box;
+  overflow: auto;
 }
 .mdxerror{
   color: #D14343;
